# durable-react-agent-dspy

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
src/dspy_temporal_react/: __init__.py  activities.py  client.py  worker.py  workflow.py
